fill in form w previous data

--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -30,7 +30,7 @@
             </tr>
             <tr>
                 <td>Deaths</td>
-                <td><input type="number" name="deaths" value="{{form.recovered.data}}" /></td>
+                <td><input type="number" name="deaths" value="{{form.deaths.data}}" /></td>
             </tr>
             <tr>
                 <td></td>
