--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -13,7 +13,7 @@
 
         <table>
             <tr>
-                <td>Date/Time</td>
+                <td>Date/Time</td> <i>{{form.old_date}}</i>
                 <td><input type="text" name="datestamp" value="{{form.datestamp.data}}"/> **use 24hr time not am/pm</td>
             </tr>
             <tr>
