--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,6 +11,8 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a href="/">Home</a></li>
+                <li><a href="/cases">Cases</a></li>
+                <li><a href="/ppe">PPE</a></li>
             </ul>
         </div>
     </div>
