--- a/app/templates/cases.html
+++ b/app/templates/cases.html
@@ -6,7 +6,7 @@
 <div class="page-header">
         <h1>Cases update</h1>
 </div>
-    <form action="" method="post" novalidate">
+    <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
         
         <i>Enter <b>cumulative</b> numbers, not numbers for one day.</i>
