--- a/app/templates/ppe.html
+++ b/app/templates/ppe.html
@@ -6,7 +6,7 @@
 <div class="page-header">
     <h1>PPE update</h1>
 </div>
-<form action="" method="post" novalidate">
+<form action="" method="post" novalidate>
     {{ form.hidden_tag() }}
     
     <table>
