added hoscap support

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,7 +12,9 @@
             <ul class="nav navbar-nav">
                 <li><a href="/">Home</a></li>
                 <li><a href="/cases">Cases</a></li>
-                <li><a href="/ppe">PPE</a></li>
+                <li><a href="/ppe/Clatsop">PPE</a></li>
+                <li><a href="https://delta.co.clatsop.or.us/portal/apps/opsdashboard/index.html#/6061702b82a043eb8dc45293350291b2">IMT dash</a></li>
+                <li><a href="https://www.arcgis.com/apps/Cascade/index.html?appid=dbf6e7169b0b4bfd882fc8361ceb3d2e">Public info</a></li>
             </ul>
         </div>
     </div>
