--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -8,6 +8,6 @@
 </div>
 
 <a href="/cases">Cases entry form</a><br />
-<a href="/ppe">PPE entry form</a>
+<a href="/ppe/Clatsop">County PPE entry form</a>
 
 {% endblock %}
