--- a/app/templates/ppe.html
+++ b/app/templates/ppe.html
@@ -9,6 +9,15 @@
 <form action="" method="post" novalidate>
     {{ form.hidden_tag() }}
     
+    <input type="hidden" name="n95_comnplete" value="{{form.n95_complete.data}}" />
+    <input type="hidden" name="mask_comnplete" value="{{form.mask_complete.data}}" />
+    <input type="hidden" name="glove_comnplete" value="{{form.glove_complete.data}}" />
+    <input type="hidden" name="coverall_comnplete" value="{{form.coverall_complete.data}}" />
+    <input type="hidden" name="gown_comnplete" value="{{form.gown_complete.data}}" />
+    <input type="hidden" name="goggle_comnplete" value="{{form.goggle_complete.data}}" />
+    <input type="hidden" name="sanitizer_comnplete" value="{{form.sanitizer_complete.data}}" />
+    <input type="hidden" name="shield_comnplete" value="{{form.shield_complete.data}}" />
+
     <table>
         <tr>
             <td>Date/Time</td>
@@ -22,47 +31,59 @@
         <tr>
             <th></th>
             <th>Amount</th>
-            <th>Burn rate</th>
+            <th>24 hour use</th>
+            <th>Goal</th>
         </tr>
         <tr>
             <td>N95 masks </td>
             <td><input type="number" name="n95" value="{{form.n95.data}}" /></td>
             <td><input type="number" name="n95_burn" value="{{form.n95_burn.data}}" /></td>
+            <td><input type="number" name="n95_goal" value="{{form.n95_goal.data}}" /></td>
+
         </tr>
         <tr>
             <td>Surgical masks </td>
             <td><input type="number" name="mask" value="{{form.mask.data}}" /></td>
             <td><input type="number" name="mask_burn" value="{{form.mask_burn.data}}" /></td>
+            <td><input type="number" name="mask_goal" value="{{form.mask_goal.data}}" /></td>
         </tr>
         <tr>
             <td>Gloves </td>
             <td><input type="number" name="glove" value="{{form.glove.data}}" /></td>
             <td><input type="number" name="glove_burn" value="{{form.glove_burn.data}}" /></td>
+            <td><input type="number" name="glove_goal" value="{{form.glove_goal.data}}" /></td>
         </tr>
         <tr>
             <td>Gowns </td>
             <td><input type="number" name="gown" value="{{form.gown.data}}" /></td>
             <td><input type="number" name="gown_burn" value="{{form.gown_burn.data}}" /></td>
+            <td><input type="number" name="gown_goal" value="{{form.gown_goal.data}}" /></td>
         </tr>
         <tr>
             <td>Sanitizer </td>
             <td><input type="number" name="sanitizer" value="{{form.sanitizer.data}}" /></td>
             <td><input type="number" name="sanitizer_burn" value="{{form.sanitizer_burn.data}}" /></td>
+            <td><input type="number" name="sanitizer_goal" value="{{form.sanitizer_goal.data}}" /></td>
         </tr>
         <tr>
             <td>Face shields </td>
             <td><input type="number" name="shield" value="{{form.shield.data}}" /></td>
             <td><input type="number" name="shield_burn" value="{{form.shield_burn.data}}" /></td>
+            <td><input type="number" name="shield_goal" value="{{form.shield_goal.data}}" />
         </tr>
         <tr>
             <td>Coveralls </td>
             <td><input type="number" name="coverall" value="{{form.coverall.data}}" /></td>
             <td><input type="number" name="coverall_burn" value="{{form.coverall_burn.data}}" /></td>
+            <td><input type="number" name="coverall_goal" value="{{form.coverall_goal.data}}" /></td>
+
+    </td>
         </tr>
         <tr>
             <td>Goggles </td>
             <td><input type="number" name="goggle" value="{{form.goggle.data}}" /></td>
             <td><input type="number" name="goggle_burn" value="{{form.goggle_burn.data}}" /></td>
+            <td><input type="number" name="goggle_goal" value="{{form.goggle_goal.data}}" /></td>
         </tr>
         <tr>
             <td>&nbsp;</td>
