--- a/app/templates/ppe.html
+++ b/app/templates/ppe.html
@@ -4,7 +4,7 @@
 
 {% block page_content %}
 <div class="page-header">
-    <h1>PPE update</h1>
+    <h1>PPE update for Clatsop County</h1>
 </div>
 <form action="" method="post" novalidate>
     {{ form.hidden_tag() }}
