--- a/app/templates/ppe_hoscap.html
+++ b/app/templates/ppe_hoscap.html
@@ -4,16 +4,20 @@
 
 {% block page_content %}
 <div class="page-header">
-    <h1>PPE update</h1>
+    <h1>PPE update for {{form.facility}}</h1>
 </div>
 <form action="" method="post" novalidate>
     {{ form.hidden_tag() }}
     
     <table>
         <tr>
-            <td>Date/Time</td>
-            <td><input type="text" name="datestamp" value="{{form.datestamp.data}}" /> <br />**use 24hr time not am/pm</td>
+            <td>Current Date/Time</td>
+            <td><input type="text" name="datestamp" value="{{form.datestamp.data}}" /> </td>
             <td><i>{{form.old_date}}</i></td>
+        </tr>
+        <tr>
+            <td>Report Date/Time</td>
+            <td><input type="text" name="updated" value="{{form.updated.data}}" /> <br />**use 24hr time not am/pm</td>
         </tr>
         <tr>
             <td>Facility</td>
