added code to show df

--- a/app/templates/thanks.html
+++ b/app/templates/thanks.html
@@ -8,5 +8,10 @@
 
     The database has been updated.
     See you tomorrow.
+
+<p>
+    {{df.transpose().to_html(header=False, justify="center")|safe}}
+</p>
+
 </div>
 {% endblock %}
