--- a/app/templates/cases.html
+++ b/app/templates/cases.html
@@ -17,20 +17,24 @@
                 <td><input type="text" name="datestamp" value="{{form.datestamp.data}}"/> **use 24hr time not am/pm</td>
             </tr>
             <tr>
-                <td>Cases </td>
-                <td><input type="number" name="positive" value="{{form.positive.data}}"/></td>
+                <td>New cases </td>
+                <td><input type="number" name="new_cases" value="{{form.new_cases.data}}"/></td>
+            </tr>
+            <tr>
+                <td>Total cases </td>
+                <td><input type="number" name="total_cases" value="{{form.total_cases.data}}"/></td>
             </tr>
             <tr>
                 <td>Negative</td>
                 <td><input type="number" name="negative"  value="{{form.negative.data}}"/></td>
             </tr>
             <tr>
-                <td>Recovered </td>
-                <td><input type="number" name="recovered" value="{{form.recovered.data}}" /></td>
+                <td>New deaths</td>
+                <td><input type="number" name="new_deaths" value="{{form.new_deaths.data}}" /></td>
             </tr>
             <tr>
-                <td>Deaths</td>
-                <td><input type="number" name="deaths" value="{{form.deaths.data}}" /></td>
+                <td>Total deaths</td>
+                <td><input type="number" name="total_deaths" value="{{form.total_deaths.data}}" /></td>
             </tr>
             <tr>
                 <td></td>
