--- a/app/templates/thanks.html
+++ b/app/templates/thanks.html
@@ -7,11 +7,13 @@
     <h1>Thanks</h1>
 
     The database has been updated.
-    See you tomorrow.
 
 <p>
     {{df.transpose().to_html(header=False, justify="center")|safe}}
 </p>
+
+<iframe title="Clatsop County Daily CVODI 19 cases" src="https://capacity.co.clatsop.or.us/cases/index.html">
+</iframe>
 
 </div>
 {% endblock %}
