--- a/app/templates/thanks.html
+++ b/app/templates/thanks.html
@@ -12,7 +12,7 @@
     {{df.transpose().to_html(header=False, justify="center")|safe}}
 </p>
 
-<iframe title="Clatsop County Daily CVODI 19 cases" src="https://capacity.co.clatsop.or.us/cases/index.html">
+<iframe title="Clatsop County Daily COVID 19 cases" src="https://capacity.co.clatsop.or.us/cases/index.html">
 </iframe>
 
 </div>
